Add screenshots and readme instructions

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ POSITION_STACK=YOUR_API_KEY
 
 # ipstack (https://ipstack.com/)
 IP_STACK=YOUR_API_KEY
+
+# Places API (https://developers.google.com/maps/documentation/places/web-service/get-api-key?hl=pt-br)
+PLACES_API=YOUR_API_KEY
