--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "Developed for practice (javascript) purposes only (non-responsive site).",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "hbs": "^4.2.0",
-    "postman-request": "^2.88.1-postman.31"
+    "dotenv": "16.0.1",
+    "express": "4.18.1",
+    "hbs": "4.2.0",
+    "postman-request": "2.88.1-postman.31"
   }
 }
