--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Developed for practice (javascript) purposes only (non-responsive site).",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,5 +16,8 @@
     "express": "4.18.1",
     "hbs": "4.2.0",
     "postman-request": "2.88.1-postman.31"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.16"
   }
 }
